--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-Contact_Form_Service_ID = "service_ayqbwry";
-Contact_Form_Template_ID =  "template_15yrvjt";
-Contact_Form_User_ID = "user_UJbBraTsMjx5pTzHYRpyd";
+React_App_Contact_Form_Service_ID = "service_ayqbwry"
+React_App_Contact_Form_Template_ID =  "template_15yrvjt"
+React_App_Contact_Form_User_ID = "user_UJbBraTsMjx5pTzHYRpyd"
