--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
-    "react-modal": "^3.14.4",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.14.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "sass": "^1.53.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
